# CMake-journey

./: CMakeLists.txt  README.md  main.cpp
headers/: hello.h
include/: test_class.h
include/other/: other.h
lessons/1-vcpkg/: CMakeLists.txt  vcpkg.cpp
resources/: cmake_journey.mpp
src/: CMakeLists.txt  other.cpp  test_class.cpp
